--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -14,10 +14,10 @@
             <div>
                 <!-- "https://i.imgur.com/J5LVHEL.jpg" -->
             <img src=<%= book.cover %> alt="book" >
-            <h3><%= book.title %></h3>
-            <p><%= book.author %></p>
-            <p><%= book.date %></p>
-            <p><%= book.description %></p>
+            <h3>Title: <%= book.title %></h3>
+            <p>Author: <%= book.author %></p>
+            <p>Publish date: <%= book.date %></p>
+            <p>Description: <%= book.description %></p>
         </div>
         <% }) %>
     </section>
