--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,9 @@
+@import url("font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
+@import url("layout.css");
+@import url("modules.css");
+@import url("state.css");
+
 * {
     box-sizing: border-box;
   }
