--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,12 +11,12 @@
 <body>
 <h1>Search Book</h1>
 
-<form action="/search" method="GET">
+<form action="/search" method="POST">
 <input type="text" name="book" placeholder="Enter book auther or title">
 <br>
-<label>Title  <input type="radio" value="title" name="bookChoice" required></label>
+<label>Title  <input type="radio" value="intitle" name="bookChoice" required></label>
 <br>
-<label>Author <input type="radio" value="author" name="bookChoice" required></label> 
+<label>Author <input type="radio" value="inauthor" name="bookChoice" required></label> 
 <br>
 <button>Go</button>   
 </form>
