--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -9,16 +9,33 @@
     <title>Books List</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li> <a href="/">Home</a></li>
+            <li> <a href="/search_book">Search Books</a></li>
+        </ul>
+    </header>
     <section>
         <% booksArr.forEach(book=>{ %>
+            <form  action="/add_book" method="post">
             <div>
                 <!-- "https://i.imgur.com/J5LVHEL.jpg" -->
+            <input type="hidden" name="image" value="<%= book.cover %>">
+            <input type="hidden" name="title" value="<%= book.title %>">
+            <input type="hidden" name="author" value="<%= book.author %>">
+            <input type="hidden" name="isbn" value="<%= book.isbn %>">
+            <input type="hidden" name="publishDate" value="<%= book.date %>">
+            <input type="hidden" name="description" value="<%= book.description %>">
+
             <img src=<%= book.cover %> alt="book" >
             <h3>Title: <%= book.title %></h3>
             <p>Author: <%= book.author %></p>
+            <p>ISBN: <%= book.isbn %></p>
             <p>Publish date: <%= book.date %></p>
             <p>Description: <%= book.description %></p>
+            <button>Add this book</button>
         </div>
+    </form>
         <% }) %>
     </section>
     
