--- a/views/pages/bookAdd.ejs
+++ b/views/pages/bookAdd.ejs
@@ -7,29 +7,19 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="Images/TTGL.png">
-    <title>Search Book</title>
+    <title>Book Added</title>
 </head>
 <body>
-    <header>
+     <header>
         <ul>
             <li> <a href="/">Home</a></li>
             <li> <a href="/search_book">Search Books</a></li>
         </ul>
     </header>
-<section id="searchForm" >
-<form action="/search" method="POST">
-<input type="text" name="book" placeholder="Enter book auther or title" required>
-<br>
-<div id="titleInput">
-<label>Title  <input type="radio" value="intitle" name="bookChoice" required></label>
-</div>
-<div id="authorInput">
-<label>Author <input type="radio" value="inauthor" name="bookChoice" required></label> 
-</div>
-<br>
-<button>Go</button>   
-</form>
+    <section id="route">
+    <h1>Book Added!</h1>
+    <p>Congrats!, a new book has been added to your list!</p>
+    <img id="All-Might" src="Images/All-Might-thumb-up.gif">
 </section>
-
 </body>
 </html>
