--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="Images/TTGL.png">
     <title>Error</title>
 </head>
 <body>
@@ -15,10 +16,11 @@
             <li> <a href="/search_book">Search Books</a></li>
         </ul>
     </header>
+    <section id="route">
     <h1>Erorr 404</h1>
     <p>Sorry, The page you requested does not exist :(</p>
-    <img src="Images/umaru-cry.gif">
-    
+    <img id="Umaru" src="Images/umaru-cry.gif">
+</section>
     
     
 </body>
