--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="Images/TTGL.png">
     <title>Book App</title>
 </head>
 <body>
@@ -13,7 +16,7 @@
             <li> <a href="/search_book">Search Books</a></li>
         </ul>
     </header>
-
+    <section id="addedBooks">
         <% booksArr.forEach(book=>{ %>
             <div>
             <img src=<%= book.image_url %> alt="book" >
@@ -21,13 +24,15 @@
             <p>Author: <%= book.author %></p>
             <p>ISBN: <%= book.isbn %></p>
             <p>Publish date: <%= book.date %></p>
-            <p>Description: <%= book.description %></p>
-            <!-- <button>Add this book</button> -->
+            <p>Description:</p>
+            <p id="descriptionBox"><%= book.description %></p>
+            <form action="/details/<%= book.id %>" method="post">
+                <button>Details</button>
+            </form>
         </div>
-        <form action="/details/<%= book.id %>" method="post">
-            <button>Details</button>
-        </form>
+
         <% }) %>
+    </section>
 
     
 </body>
