--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="icon" href="Images/TTGL.png">
+    <title>Book Details</title>
 </head>
 <body>
+    <header>
     <ul>
         <li> <a href="/">Home</a></li>
         <li> <a href="/search_book">Search Books</a></li>
     </ul>
-
+    </header>
+    <section id="addedBooks">
     <div>
         <img src=<%= book.image_url %> alt="book" >
         <h3>Title: <%= book.title %></h3>
         <p>Author: <%= book.author %></p>
         <p>ISBN: <%= book.isbn %></p>
-        <p>Publish date: <%= book.date %></p>
+        <p>Publish date: <%= book.date %></p>`
         <p>Description: <%= book.description %></p>
     </div>
-    
+</section>
 
     <form action="/deleteBook/<%=book.id%>?_method=delete" method="post">
         <button>Delete book</button>
