--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="Images/TTGL.png">
     <title>Books List</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <li> <a href="/search_book">Search Books</a></li>
         </ul>
     </header>
-    <section>
+    <section id="addedBooks">
         <% booksArr.forEach(book=>{ %>
             <form  action="/add_book" method="post">
             <div>
@@ -32,7 +33,8 @@
             <p>Author: <%= book.author %></p>
             <p>ISBN: <%= book.isbn %></p>
             <p>Publish date: <%= book.date %></p>
-            <p>Description: <%= book.description %></p>
+            <p>Description:</p>
+            <p id="descriptionBox"><%= book.description %></p>
             <button>Add this book</button>
         </div>
     </form>
